Link overflow fix

--- a/src/css/siteTemplate.css
+++ b/src/css/siteTemplate.css
@@ -29,6 +29,9 @@ body {
 }
 
 .ac-link {
+    overflow-wrap: break-word;
+}
+.ac-link {
     color: #C86142;
 }
 
